<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".presentation.story_features.add_story.AddStoryActivity">

        <include
            android:id="@+id/toolbar"
            layout="@layout/main_toolbar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <ImageView
            android:id="@+id/preview_image_view"
            android:layout_width="0dp"
            android:layout_height="280dp"
            android:contentDescription="@string/preview_image"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/ic_baseline_image_24"
            app:layout_constraintBottom_toTopOf="@id/btn_camera"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            app:layout_constraintVertical_chainStyle="packed" />

        <Button
            android:id="@+id/btn_camera"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/camera"
            app:layout_constraintBottom_toTopOf="@id/til_description"
            app:layout_constraintEnd_toStartOf="@id/btn_gallery"
            app:layout_constraintStart_toStartOf="@id/preview_image_view"
            app:layout_constraintTop_toBottomOf="@id/preview_image_view"
            app:layout_constraintVertical_chainStyle="packed" />

        <Button
            android:id="@+id/btn_gallery"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/gallery"
            app:layout_constraintBottom_toBottomOf="@id/btn_camera"
            app:layout_constraintEnd_toEndOf="@id/preview_image_view"
            app:layout_constraintStart_toEndOf="@id/btn_camera"
            app:layout_constraintTop_toTopOf="@id/btn_camera" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_description"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:layout_constraintBottom_toBottomOf="@id/btn_upload"
            app:layout_constraintEnd_toEndOf="@id/btn_gallery"
            app:layout_constraintStart_toStartOf="@id/btn_camera"
            app:layout_constraintTop_toBottomOf="@id/btn_camera"
            app:layout_constraintVertical_chainStyle="packed">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:id="@+id/ed_description"
                android:gravity="top|start"
                android:hint="@string/enter_description"
                android:layout_height="match_parent"
                android:inputType="textMultiLine"
                android:lines="10" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_upload"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:text="@string/upload"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/til_description"
            app:layout_constraintStart_toStartOf="@id/til_description"
            app:layout_constraintTop_toBottomOf="@id/til_description" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>