<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.auth_features.login.LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <ImageView
            android:id="@+id/logo_shield"
            android:layout_width="240dp"
            android:layout_height="240dp"
            android:layout_marginBottom="50dp"
            android:contentDescription="@string/logo_shield"
            android:src="@drawable/android_developer_logo_170920110556"
            app:layout_constraintBottom_toTopOf="@+id/greeting_login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/greeting_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/greeting_login"
            android:textColor="@color/black"
            android:textSize="26sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/greeting_login_2"
            app:layout_constraintStart_toStartOf="@+id/greeting_login_2"
            app:layout_constraintTop_toBottomOf="@id/logo_shield" />

        <TextView
            android:id="@+id/greeting_login_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="16dp"
            android:text="@string/login"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/til_login_email"
            app:layout_constraintStart_toStartOf="@+id/til_login_email"
            app:layout_constraintTop_toBottomOf="@id/greeting_login" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_login_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginBottom="24dp"
            android:hint="@string/email"
            android:labelFor="@id/ed_login_email"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusTopStart="8dp"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:layout_constraintBottom_toTopOf="@id/til_login_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/greeting_login_2"
            app:layout_constraintVertical_chainStyle="packed">

            <com.pahnal.mystoryapp.custom.MyEditText
                android:id="@+id/ed_login_email"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="#F4F4F4" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_login_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:hint="@string/password"
            android:labelFor="@id/ed_login_password"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusTopStart="8dp"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:layout_constraintBottom_toTopOf="@id/btn_login"
            app:layout_constraintEnd_toEndOf="@id/til_login_email"
            app:layout_constraintStart_toStartOf="@id/til_login_email"
            app:layout_constraintTop_toBottomOf="@id/til_login_email">

            <com.pahnal.mystoryapp.custom.MyEditText
                android:id="@+id/ed_login_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="#F4F4F4"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:backgroundTint="@android:color/holo_blue_light"
            android:text="@string/login"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/til_login_password"
            app:layout_constraintStart_toStartOf="@id/til_login_password"
            app:layout_constraintTop_toBottomOf="@id/til_login_password" />

        <TextView
            android:id="@+id/not_have_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/not_have_account"
            android:textSize="16sp"
            android:textStyle="bold"

            app:layout_constraintBottom_toBottomOf="@+id/btn_go_register"
            app:layout_constraintEnd_toStartOf="@+id/btn_go_register"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="@+id/btn_login"
            app:layout_constraintTop_toTopOf="@+id/btn_go_register" />

        <TextView
            android:id="@+id/btn_go_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="24dp"
            android:text="@string/register"
            android:textColor="@android:color/holo_blue_light"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/btn_login"
            app:layout_constraintStart_toEndOf="@id/not_have_account"
            app:layout_constraintTop_toBottomOf="@id/btn_login" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>

